Maximum route complete

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,23 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+
+  /* *** My Code Start*/
+  /* background-color:rgb(25, 112, 86) !important ; */
+
+  /* Full height */
+  /* height: 100%; */
+
+  /* Center and scale the image nicely */
+  /* background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover; */
+
+ 
+
+/******end My Code******/
+
 }
 
 code {
